<resources>

    <string name="app_name">Transceo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_subscription">Sousciption</string>
    <string name="edit_mail">Adresse électronique</string>
    <string name="edit_password">Mot de passe</string>
    <string name="button_connexion">Connexion</string>
    <string name="button_subscription">Souscrire</string>
    <string name="image_logo">Transceo logo</string>
    <string name="edit_date">Date</string>
    <string name="edit_time">Heure</string>
    <string name="edit_nb_personne">Nb de personne</string>
    <string name="edit_comment">Information complémentaire</string>
    <string name="title_activity_booking">Réservation</string>
    <string name="edit_last_name">Nom</string>
    <string name="edit_first_name">Prénom</string>
    <string name="edit_firm">Société</string>
    <string name="edit_phone">Téléphone</string>
    <string name="label_subscription"><u>Souscription</u></string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_ville">Ville</string>
    <string name="label_depart">Départ</string>
    <string name="label_destination">Destination</string>

</resources>