<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_mail"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/edit_mail"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mail"
        android:hint="@string/edit_password"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:onClick="sendMessage"
        android:text="@string/button_connexion"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>