<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:hint="@string/edit_date"
        android:inputType="date"
        android:width="200dp" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/edit_date"
        android:hint="@string/edit_time"
        android:inputType="none"
        android:width="200dp" />

    <EditText
        android:id="@+id/edit_nb_personne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/edit_time"
        android:hint="@string/edit_nb_personne"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_nb_personne"
        android:hint="@string/edit_comment"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="4" />

    <TextView
        android:id="@+id/text_depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_comment"
        android:layout_below="@+id/edit_comment"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_depart"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_depart"
        android:layout_alignBottom="@+id/text_depart"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/text_depart"
        android:text="@string/label_destination"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edit_adr_depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_depart"
        android:hint="@string/hint_adresse"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_adr_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_destination"
        android:layout_toRightOf="@+id/edit_adr_depart"
        android:hint="@string/hint_adresse"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_ville_depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_adr_depart"
        android:hint="@string/hint_ville"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edit_ville_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_adr_destination"
        android:layout_toRightOf="@+id/edit_ville_depart"
        android:hint="@string/hint_ville"
        android:inputType="textPostalAddress" />

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_ville_depart"
        android:layout_marginTop="20dp"
        class="com.google.android.gms.maps.MapFragment" />

</RelativeLayout>