<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <TextView
        android:id="@+id/label_date"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_date"
        android:text="@string/edit_date" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_date"
        android:clickable="false"
        android:cursorVisible="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/label_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_time"
        android:layout_alignLeft="@+id/label_date"
        android:layout_alignRight="@+id/label_date"
        android:layout_toLeftOf="@+id/edit_time"
        android:text="@string/edit_time" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_date"
        android:layout_below="@+id/edit_date"
        android:inputType="none" />

    <TextView
        android:id="@+id/label_nb_personne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_nb_personne"
        android:layout_alignLeft="@+id/label_time"
        android:layout_alignRight="@+id/label_time"
        android:layout_toLeftOf="@+id/edit_nb_personne"
        android:text="@string/edit_nb_personne" />

    <EditText
        android:id="@+id/edit_nb_personne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_time"
        android:layout_below="@+id/edit_time"
        android:inputType="number" />

    <TextView
        android:id="@+id/label_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_nb_personne"
        android:layout_alignRight="@+id/label_nb_personne"
        android:layout_alignTop="@+id/edit_comment"
        android:layout_toLeftOf="@+id/edit_comment"
        android:text="@string/edit_comment" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_nb_personne"
        android:layout_below="@+id/edit_nb_personne"
        android:inputType="textMultiLine" />

</RelativeLayout>